tests/Ninja/Build/failing-commands.ninja
# Check the handling of failed commands.

# Check that we don't build a command downstream of a failing one.
#
# RUN: rm -rf %t.build
# RUN: mkdir -p %t.build
# RUN: cp %s %t.build/build.ninja
# RUN: %{llbuild} ninja build --jobs 1 --chdir %t.build --no-db &> %t1.out || true
# RUN: %{FileCheck} < %t1.out %s
#
# CHECK: [1/{{.*}}] FALSE
# CHECK-NEXT: error: process failed: echo "this command fails"; false
# CHECK-NEXT: this command fails
# CHECK-NEXT: error: stopping build 
# CHECK-NOT: [2/{{.*}}] "cp output-1 output"

rule CP
     command = cp ${in} ${out}
     description = "${command}"
rule FALSE
     command = echo "this command fails"; false
     description = FALSE

build output-1: FALSE
build output: CP output-1
default output
